--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,14 +2,20 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *" 
+    # Uruchamia się co 12 godzin
+    - cron: "0 */12 * * *"
+  
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: write
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       
       - uses: Platane/snk@v3
         with:
@@ -18,7 +24,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
